# gipf-ai

./: .clang_complete  .gitmodules  CMakeLists.txt  README.md  gipf.i
include/: board.h  direction.h  gipf.h  utils.h
python/: Game.py  MCTS.py
src/: board.cpp  main.cpp
